<resources>
    <string name="app_name">DevCorona</string>
    <string name="title_activity_maps">DevCorona</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="main_button">Activer</string>
    <string name="title_activity_menu">Dev Corona</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dev Corona</string>
    <string name="nav_header_subtitle">operator@devcorona.cm</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Actualité</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="menu_info">S\'informer</string>
    <string name="menu_evolution">Evolution de la pandemie</string>
    <string name="menu_symptome">Symptomes</string>

    <string name="menu_form">E-Consultation</string>
    <string name="menu_tip">Aide et conseil</string>
    <string name="menu_alert">Signaler un malade</string>

    <string name="menu_update">Mis à jour</string>
    <string name="menu_follow">Prise en charge</string>
    <string name="logo_text">Logo texte</string>
    <string name="logo_vert">Logo vert</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_subtile">Les avancés du Covid-19 sur le train de vie quotidien des Camerounais</string>
</resources>
