<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fgihub.stopcoronacmr.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>


    <fragment
        android:id="@+id/nav_evolution"
        android:name="com.fgihub.stopcoronacmr.ui.evolution.EvolutionFragment"
        android:label="@string/menu_evolution"
        tools:layout="@layout/fragment_evolution" />

    <fragment
        android:id="@+id/nav_symptome"
        android:name="com.fgihub.stopcoronacmr.ui.symptome.SymptomeFragment"
        android:label="@string/menu_symptome"
        tools:layout="@layout/fragment_symptome" />

    <fragment
        android:id="@+id/nav_forms"
        android:name="com.fgihub.stopcoronacmr.ui.econsultation.EConsultationFragment"
        android:label="@string/menu_form"
        tools:layout="@layout/fragment_e_consultation" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.fgihub.stopcoronacmr.ui.signal_alert.SignalAlertFragment"
        android:label="@string/menu_alert"
        tools:layout="@layout/fragment_signal_alert" />

    <fragment
        android:id="@+id/nav_follow"
        android:name="com.fgihub.stopcoronacmr.ui.follow.FollowFragment"
        android:label="@string/menu_follow"
        tools:layout="@layout/fragment_follow" />
</navigation>